apply btn fixed on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -559,12 +559,13 @@ justify-content: space-between;
   }
   
   .apply_job_btn {
-    background: #000000;
+    background: #000;
     padding: 10px 15px;
     color: #fff;
     border-radius: 5px;
     font-size: 17px;
-    margin-left: 67px;
+    margin-left: 27px;
+    margin-top: 30px;
   }
   
   
